--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.378.0",
     "next": "^14.2.1",
     "react": "18.2.0",
